# spice

./: .gitignore  .mailmap  AGENTS.md  CHANGELOG.md  CONFIG.md  CRITIQUE_RESPONSE.md  DESIGN.md  LICENSE  MANIFEST.in  MAXIMS.md  MENTAL_MODEL.md  README.md  STABILITY.md  UI_INVARIANTS.md  conftest.py  package-lock.json  package.json  pyproject.toml  spice.sh
.claude/: launch.json
docs/: interface.md  library-seam.md  overview.md  release.md
docs/cli/: wrapper-commands.md
docs/config/: reference.md
docs/design/: INVARIANTS.md  README.md  architecture.md  in-band-assistant-output-protocol.md  invariants.md  peer-review-feedback-to-running-agents.md  serve-ui-framework-path.md  sidecar-artifact-storage.md  single-install-runtime-model.md  task-markdown-dag.md  task-sizing-signals.md  top-level-non-code-phases.md
docs/design/accepted/: quest-hardware-public-demo.md  serve-team-metric-attribution.md  task-markdown-dag.md
docs/design/experimental/: peer-review-feedback-to-running-agents.md  serve-home-team.md  serve-lane-driver-identity.md  serve-ui-framework-path.md  sidecar-artifact-storage.md  top-level-non-code-phases.md
docs/serve/: invariants-reference.md  invariants.md  ui-invariants.md
docs/studies/: README.md  in-band-assistant-output-protocol.md  no-privileged-channel-multi-human.md  peer-review-feedback-to-running-agents.md  quest-hardware-public-demo.md  semantic-ack-standalone-protocol.md  serve-actor-lineage-metric-prototype.md  serve-home-team.md  serve-lane-driver-identity.md  serve-team-metric-attribution.md  serve-ui-framework-path.md  serve-ui-lit-island-prototype.md  sidecar-artifact-storage.md  single-install-runtime-model.md  task-sizing-signals.md  top-level-non-code-phases.md  transparent-steering-injection.md
scripts/: release
spice/: __main__.py  config.py  configcli.py  errors.py  flexstate.py  locking.py  paths.py  policy.py  policyconfig.py  procs.py  release.py  repocfg.py  worktrees.py
spice/agent/: SKILL.md  activation.py  cli.py  driver.py  gitshadow.py  identity.py  lifecycle.py  maximcli.py  maxims.py  paths.py  renewal.py  rgwrap.py  selftracking.py  shadow.py  shellhook.py  sidechannel.py  sidechannelnotify.py  watchdog.py  wrap.py
spice/agent/shellhooks/: .zlogin  .zprofile  .zshenv  .zshrc  bash_env
spice/agent/shellhooks2/: .zlogin  .zprofile  .zshenv  .zshrc  bash_env
spice/agent/staticshellhooks/: .zshenv  .zshrc
spice/cli/: entry.py  mounts.py  parser.py  recovery.py
spice/hooks/: cli.py  commitmsg.py  doctor.py  install.py  precommit.py  refguard.py
spice/mail/: acks.py  ackstate.py  attachments.py  feedback.py  inbox.py  readout.py  watch.py
spice/serve/: agentapi.py  app.py  attachments.py  audio.py  cli.py  diagnostics.py  directivestats.py  drive.py  filewatch.py  identitypayload.py  identitypayloads.py  images.py  lanepayload.py  livebus.py  markdown.py  messagepayload.py  messages.py  metricpayload.py  metrics.py  payloads.py  pending.py  steering.py  taskdirectives.py  teamcommands.py  teamfilters.py  teamidentity.py  teamids.py  teammetrics.py  teammodels.py  teamrenewals.py  teams.py  teamschema.py  typecheck.py  web.py  websocket.py  workroutes.py  worktreepayload.py  worktrees.py
spice/serve/browser/: artifacts.py
spice/serve/payload/: identity.py  lane.py  message.py
spice/serve/static/: app.audio.js  app.composer.js  app.controls.js  app.filter-model.js  app.groups.js  app.js  app.lanes.js  app.menu.js  app.metrics-lit.js  app.panes.js  app.render.js  app.shell.js  app.stream.js  app.types.js  composer.css  index.css  messages.css  site.webmanifest  status-colors.css
spice/serve/team/: commands.py  filters.py  identity.py  metrics.py  models.py  renewals.py  schema.py  store.py
spice/serve/worktree/: inventory.py
spice/sessions/: analysis.py  briefing.py  cli.py  commandaudit.py  commandrecords.py  meter.py  records.py  resolve.py  slices.py  util.py
spice/studies/: assertfree.py  cli.py  complexity.py  csharpmembers.py  csharpunused.py  envpolicy.py  fileloc.py  javascriptunused.py  localpaths.py  magicnums.py  mutations.py  reachability.py  repodocs.py  shape.py  subsumption.py  taste.py  testquality.py  treesitter.py  typecheck.py  walk.py
spice/tasks/: alloc.py  artifacts.py  cli.py  config.py  create.py  gitsync.py  identity.py  lanes.py  markdown.py  ops.py  render.py  reviewfeedback.py  sizing.py  tw.py
tests/: test_acks.py  test_acktasks.py  test_activation.py  test_agentrgwrap.py  test_agentrun.py  test_agentshim.py  test_audio.py  test_claudedriver.py  test_clirecovery.py  test_command.py  test_commitmsg.py  test_complexityhotspots.py  test_config.py  test_csharpmembers.py  test_csharpunused.py  test_directivestats.py  test_doctor.py  test_envpolicy.py  test_feedback.py  test_hermeticity.py  test_hookbackends.py  test_hookhelpers.py  test_hooks.py  test_identitypayload.py  test_images.py  test_inbox.py  test_javascriptunused.py  test_lanepayload.py  test_lifecycle.py  test_lineage.py  test_livebus.py  test_locking.py  test_magicnums.py  test_markdown.py  test_markerfidelity.py  test_maxims.py  test_messagepayload.py  test_metricretention.py  test_metrics.py  test_metricseries.py  (+70 more)
tests/browser/: serve_composer_reorder_smoke.js  serve_identity_smoke.js  serve_lifetime_team_smoke.js  serve_menu_smoke.js  serve_pending_badge_smoke.js  serve_playwright_harness.js  serve_task_card_live_smoke.js  serve_team_metrics_smoke.js
tests/fixtures/: composer_accepted_draft_clear.js  composer_driver_icon_reconcile.js  filter_model.js  fused_status_split.js  global_status_line.js  lane_diff_frames.js  lane_identity_reconcile.js  lane_pane_direction.js  lifetime_slider_pending.js  lit_metrics_island.js  pending_count_reconcile.js  serve_menu_version.js  speech_session_title.js  spice_menu_new_team_order.js  stale_lane_chrome_config.js  target_refresh_pending_reconcile.js  task_filter_inventory_reconcile.js  team_snapshot_renewal_reconcile.js
