[build-system]
requires = ["setuptools>=80", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "spice-harness"
version = "0.10.0"
description = "Simultaneous Production, Integration, and Control Environment: an agent harness for coding repositories."
readme = "README.md"
requires-python = ">=3.12"
license = "Apache-2.0"
dependencies = [
    "lizard>=1.21",
    "ruff>=0.11",
    "watchfiles>=1.1",
]

[project.urls]
Homepage = "https://github.com/infimalabs/spice"
Repository = "https://github.com/infimalabs/spice"
Issues = "https://github.com/infimalabs/spice/issues"

[project.scripts]
spice = "spice.cli.entry:main"

[tool.setuptools.packages.find]
where = ["."]
include = ["spice*"]
namespaces = true

[tool.setuptools.package-data]
"spice" = ["py.typed"]
"spice.agent" = [
    "*.md",
    "shellhooks/.zshenv",
    "shellhooks/.zprofile",
    "shellhooks/.zshrc",
    "shellhooks/.zlogin",
    "shellhooks/bash_env",
    "shellhooks2/.zshenv",
    "shellhooks2/.zprofile",
    "shellhooks2/.zshrc",
    "shellhooks2/.zlogin",
    "shellhooks2/bash_env",
]
"spice.serve.static" = [
    "*.css",
    "*.js",
    "*.ico",
    "*.png",
    "*.svg",
    "*.webmanifest",
    "icons/*.svg",
]

[dependency-groups]
dev = [
    "pyright>=1.1",
    "pytest>=8.0",
]

[tool.pyright]
include = ["spice"]
typeCheckingMode = "standard"
pythonVersion = "3.12"

[tool.ruff]
target-version = "py312"
line-length = 88

[tool.pytest.ini_options]
testpaths = ["tests"]

[tool.spice.agent]
wrappers = ["common", "spice-dev"]

[tool.spice.wrappers.spice-dev]
pre-commit = { argv = ["spice", "dev", "pre-commit"] }

[tool.spice.tasks]
stems = ["session", "mail", "hooks", "studies", "cli", "lifecycle", "tests"]

[tool.spice.serve]
brand = "spice"

[tool.spice.commands]
release = ["uv", "run", "python", "-m", "spice.release"]
