[build-system]
requires = ["setuptools>=80", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "spice-harness"
version = "0.14.0"
description = "Simultaneous Production, Integration, and Control Environment: an agent harness for coding repositories."
readme = "README.md"
requires-python = ">=3.12"
license = "Apache-2.0"
dependencies = [
    "lizard>=1.21",
    "ruff>=0.11",
    "watchfiles>=1.1",
]

[project.urls]
Homepage = "https://github.com/infimalabs/spice"
Repository = "https://github.com/infimalabs/spice"
Issues = "https://github.com/infimalabs/spice/issues"

[project.scripts]
spice = "spice.cli.entry:main"

[tool.setuptools.packages.find]
where = ["."]
include = ["spice*"]
namespaces = true

[tool.setuptools.package-data]
"spice" = ["py.typed"]
"spice.agent" = [
    "*.md",
    "shellhooks/.zshenv",
    "shellhooks/.zprofile",
    "shellhooks/.zshrc",
    "shellhooks/.zlogin",
    "shellhooks/bash_env",
    "staticshellhooks/.zshenv",
    "staticshellhooks/.zprofile",
    "staticshellhooks/.zshrc",
    "staticshellhooks/.zlogin",
    "staticshellhooks/bash_env",
]
"spice.serve.static" = [
    "*.css",
    "*.js",
    "*.ico",
    "*.png",
    "*.svg",
    "*.webmanifest",
    "icons/*.svg",
]

[dependency-groups]
dev = [
    "pyright>=1.1",
    "pytest>=8.0",
]

[tool.pyright]
include = ["spice"]
typeCheckingMode = "standard"
pythonVersion = "3.12"

[tool.ruff]
target-version = "py312"
line-length = 88

[tool.pytest.ini_options]
testpaths = ["tests"]

[tool.spice.agent]
wrappers = ["common", "spice-dev"]

[tool.spice.wrappers.spice-dev]
pre-commit = { argv = ["spice", "dev", "pre-commit"] }

[tool.spice.tasks]
stems = ["session", "mail", "hooks", "studies", "cli", "lifecycle", "tests"]

[tool.spice.policy]
env_names = [
    "BASH_ENV",
    "CLAUDE_CODE_SESSION_ID",
    "CLAUDE_CONFIG_DIR",
    "CODEX_HOME",
    "CODEX_SESSION_TURN_ID",
    "CODEX_THREAD_ID",
    "CODEX_TURN_ID",
    "GIT_CONFIG_COUNT",
    "GIT_CONFIG_KEY_0",
    "GIT_CONFIG_SYSTEM",
    "GIT_CONFIG_VALUE_0",
    "GIT_EDITOR",
    "GIT_SSH_COMMAND",
    "GIT_TERMINAL_PROMPT",
    "HISTFILE",
    "HOME",
    "FAKEENV_OK",
    "PATH",
    "FAKEENV_PORT",
    "PYTHONPATH",
    "RTK_DB_PATH",
    "SPICE_AGENT_BIN",
    "SPICE_AGENT_DRIVER",
    "SPICE_METRIC_HISTORY_RETENTION_DAYS",
    "SPICE_MOUNTED_COMMAND",
    "SPICE_SERVE_BIN",
    "SPICE_SHELL_HOOK_ORIGINAL_BASH_ENV",
    "SPICE_SHELL_HOOK_ORIGINAL_HISTFILE",
    "SPICE_SHELL_HOOK_ORIGINAL_ZDOTDIR",
    "SPICE_SHELL_HOOK_PYTHON",
    "SPICE_SHELL_HOOK_REPO_ROOT",
    "SPICE_SHELL_HOOK_WRAPPERS",
    "SPICE_STAGED_PATHS",
    "SPICE_TASK_BACKEND",
    "SPICE_TEST_TRACE",
    "SPICE_VISIBLE_PROG",
    "FAKEENV_THIRD_BIN",
    "FAKEENV_THIRD_THREAD_ID",
    "FAKEENV_THIRD_TURN_ID",
    "FAKEENV_TLS",
    "UV_PUBLISH_TOKEN",
    "VIRTUAL_ENV",
    "FAKEENV_X",
    "ZDOTDIR",
    "ZSH_COMPDUMP",
]

[tool.spice.serve]
brand = "spice"

[tool.spice.commands]
release = ["uv", "run", "python", "-m", "spice.release"]
